tests/baselines/reference/correctlyMarkAliasAsReferences4(strict=true).errors.txt
error TS2318: Cannot find global type 'CallableFunction'.
error TS2318: Cannot find global type 'NewableFunction'.
0.tsx(6,21): error TS2454: Variable 'buttonProps' is used before being assigned.


!!! error TS2318: Cannot find global type 'CallableFunction'.
!!! error TS2318: Cannot find global type 'NewableFunction'.
==== 0.tsx (1 errors) ====
    ///<reference path="declaration.d.ts" />
    import * as cx from 'classnames';
    import * as React from "react";
    
    let buttonProps : {[attributeName: string]: ''}
    let k = <button {...buttonProps} className={cx('class1', { class2: true })} />;
                        ~~~~~~~~~~~
!!! error TS2454: Variable 'buttonProps' is used before being assigned.
==== declaration.d.ts (0 errors) ====
    declare module "classnames";
    